[tool.poetry]
name = "fal-serverless-vscode"
version = "0.1.0"
description = ""
authors = ["Daniel Rochetti <daniel@fal.ai>"]
readme = "README.md"
packages = [{include = "fal_serverless_vscode"}]

[tool.poetry.dependencies]
python = "^3.9"
fal-serverless = "^0.6.28"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pre-commit = "^3.2.2"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
